--- a/src/Radical.Windows/Presentation/SplashScreenView.xaml
+++ b/src/Radical.Windows/Presentation/SplashScreenView.xaml
@@ -2,7 +2,7 @@
         x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:rg="clr-namespace:Radical.Windows.Presentation.Regions"
+        xmlns:rg="clr-namespace:Radical.Windows.Regions"
         Title="">
     <Grid>
         <ContentPresenter rg:RegionService.Region="{rg:ContentPresenterRegion Name=SplashScreenContent}" />
